[gd_scene load_steps=7 format=3 uid="uid://vrps2htuqvim"]

[ext_resource type="Script" path="res://source/tile/celestialTile.gd" id="1_attrt"]
[ext_resource type="Texture2D" uid="uid://d1d0v7sr8enel" path="res://assets/atlas/tilesDiffuse.png" id="2_vvfkj"]
[ext_resource type="Texture2D" uid="uid://dkwt66rlwtpqx" path="res://assets/atlas/tilesNormal.png" id="3_l6klp"]
[ext_resource type="PackedScene" uid="uid://cvy48k4y7bv3c" path="res://source/tile/entityPlot.tscn" id="4_t0whq"]

[sub_resource type="CanvasTexture" id="CanvasTexture_xegl8"]
diffuse_texture = ExtResource("2_vvfkj")
normal_texture = ExtResource("3_l6klp")

[sub_resource type="CanvasTexture" id="CanvasTexture_1v13x"]
diffuse_texture = ExtResource("2_vvfkj")
normal_texture = ExtResource("3_l6klp")

[node name="CelestialTile" type="Node2D"]
script = ExtResource("1_attrt")

[node name="Ground" type="Polygon2D" parent="."]
z_index = 3
texture = SubResource("CanvasTexture_xegl8")

[node name="EntitySprite" type="Sprite2D" parent="."]
z_index = -1
texture = SubResource("CanvasTexture_1v13x")
region_enabled = true
region_rect = Rect2(0, 0, 32, 32)

[node name="EntityPlot" parent="." node_paths=PackedStringArray("celestial_tile") instance=ExtResource("4_t0whq")]
celestial_tile = NodePath("..")
